[Home, Contact fixed and link with section aligned]

--- a/css/style.css
+++ b/css/style.css
@@ -1024,7 +1024,7 @@ body:after {
       color: #000; 
 }
 
-.icon-facebook,.icon-instagram,.icon-whatsapp{
+.icon-facebook,.icon-instagram,.icon-whatsapp, .icon-youtube{
   font-size: 20px;
 }
 
